# thinkware-file-extractor-xethhung12

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
src/thinkware_file_extractor_xethhung12/: __init__.py  __main__.py  cut.py  example.py  script_gen.py  utils_tools.py  video_clipping.py
